# swagger.json
@@ -1,11 +1,14 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.1",
   "info": {
-    "version": "1.0.0",
-    "title": "PTIT Roll-Call APIs"
+    "title": "PTIT Roll-Call API",
+    "version": "1.0.0"
   },
-  "host": "be-checkin.herokuapp.com",
-  "basePath": "/api",
+  "servers": [
+    {
+      "url": "https://be-checkin.herokuapp.com/api"
+    }
+  ],
   "tags": [
     {
       "name": "class"
@@ -13,9 +16,6 @@
     {
       "name": "user"
     }
-  ],
-  "schemes": [
-    "https"
   ],
   "paths": {
     "/user/register": {
@@ -26,25 +26,28 @@
         "summary": "Create user",
         "description": "This can only be done by the logged in user.",
         "operationId": "createUser",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Created user object",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/User"
+        "requestBody": {
+          "description": "Created user object",
+          "content": {
+            "*/*": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
             }
-          }
-        ],
+          },
+          "required": true
+        },
         "responses": {
           "default": {
-            "description": "successful operation"
+            "description": "successful operation",
+            "content": {}
           }
-        }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/user/login": {
@@ -53,76 +56,84 @@
           "user"
         ],
         "summary": "Logs user into the system",
-        "description": "",
         "operationId": "loginUser",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "type": "string"
-                },
-                "password": {
-                  "type": "string"
+        "requestBody": {
+          "description": "The user name and password for login",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
                 }
               }
-            },
-            "description": "The user name and password for login",
-            "required": true
-          }
-        ],
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "A User object",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "user": {
-                  "$ref": "#/definitions/User"
-                },
-                "token": {
-                  "type": "string",
-                  "description": "The user name."
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user": {
+                      "$ref": "#/components/schemas/User"
+                    },
+                    "token": {
+                      "type": "string",
+                      "description": "The user name."
+                    }
+                  }
                 }
               }
             }
           },
           "401": {
-            "description": "Invalid username/password supplied"
+            "description": "Invalid username/password supplied",
+            "content": {}
           }
-        }
+        },
+        "x-codegen-request-body-name": "body"
       }
     }
   },
-  "definitions": {
-    "User": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
+  "components": {
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
+    "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string",
+            "description": "User Info"
+          }
         },
-        "name": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string",
-          "description": "User Info"
+        "xml": {
+          "name": "User"
         }
-      },
-      "xml": {
-        "name": "User"
       }
     }
   }
